tests/test_files/invalid/semantic/attribute_defined_mulitple_times.pfdl
# SPDX-FileCopyrightText: The PFDL Contributors
# SPDX-License-Identifier: MIT

Struct TestStruct
    attribute: number
    attribute: string # Name of the attribute is already assigned
End